[package]
name = "instana_opentelemetry_sdk"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description="This library provides an OpenTelemetry Rust SDK which supports exporter, propagation and serialization. It allows you to send OpenTelemetry trace data to Instana for monitoring and observability."
repository = "https://github.com/instana/instana-opentelemetry-rust"
documentation = "https://github.com/instana/instana-opentelemetry-rust"
homepage = "https://github.com/instana/instana-opentelemetry-rust"

[dependencies]
bytes = "1.10.1"
features = "0.10.0"
http = "1.3.1"
json = "0.12.4"
opentelemetry = "0.29.1"
opentelemetry-http = { version = "0.29.0", features = ["hyper","reqwest"] }
opentelemetry-proto = "0.29.0"
opentelemetry_sdk = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"]} 
url = "2.5.4"
wiremock = "0.6.3"
anyhow = "1.0"
