[package]
name = "opentelemetry_instana"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description="Instana Opentelemetry Rust SDK"


[dependencies]
bytes = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true , features = ["trace"]}
opentelemetry-http = { workspace = true, features = ["hyper", "reqwest", "reqwest-blocking"] }
opentelemetry-proto = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }

reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
url = { workspace = true }
wiremock = { workspace = true }
anyhow = { workspace = true }
