[package]
name = "matrix_multiplication"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_instana = { path = "../.." }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "gzip-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = ["json"] }

# Single binary target
[[bin]]
name = "matrix_multiplication"
path = "src/main.rs"
