[package]
name = "matrix_printer"
version = "1.0.1"
edition = "2021"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_instana = { workspace = true }
opentelemetry_sdk = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Single binary target
[[bin]]
name = "matrix_printer"
path = "src/main.rs"
